plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

group = 'de.rouhim'
version = '1.0.0'
def MAIN_CLASS = 'de.rouhim.bts.Main'

application {
    mainClass = MAIN_CLASS
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.jsoup:jsoup:1.15.3'
    implementation 'se.michaelthelin.spotify:spotify-web-api-java:4.3.0'
    implementation 'commons-io:commons-io:2.15.0'
}

// This task generates a fat/uber jar
jar {
    manifest {
        attributes('Main-Class': MAIN_CLASS)
    } from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}
